<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">c-beam-viewer</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_mqtt_user">Username</string>
    <string name="pref_summary_mqtt_user">for the MQTT server</string>
    <string name="pref_summary_mqtt_password">for the MQTT server</string>
    <string name="pref_title_mqtt_password">Password</string>
    <string name="settings">Settings</string>
    <string name="pref_title_mqtt_tls">Enable TLS</string>
    <string name="pref_summary_mqtt_tls">for the MQTT connection</string>
    <string name="pref_summary_mqtt_uri">MQTT server URI</string>
    <string name="pref_title_mqtt_uri">MQTT URI</string>
    <string name="pref_summary_default_url">for the webview</string>
    <string name="pref_title_default_url">Default URL</string>

    <string name="connection_to_server_failed">Connection to the MQTT server failed</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
</resources>
